<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_login">

    <ProgressBar
        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyle"
        android:indeterminateTint="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/button_back_edit_profile"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_margin="12dp"
        android:background="@drawable/abc_vector_test"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="onBackButtonClick"
        android:layout_alignParentStart="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/welcome_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/lato"
            android:text="@string/welcome_back"
            android:textColor="#000000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/welcome_back"
            android:text="@string/login"
            android:textSize="25sp"
            android:layout_marginVertical="10dp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/lato"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_below="@id/login_text"
            android:hint="@string/email"
            app:boxBackgroundMode="outline"
            style="@style/TextInputLayoutStyle">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_text"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_email_layout"
            android:hint="@string/password"
            android:layout_marginVertical="5dp"
            app:boxBackgroundMode="outline"
            app:endIconMode="password_toggle"
            style="@style/TextInputLayoutStyle">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/lato"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:onClick="login"
            android:shadowRadius="200"
            android:text="@string/login"
            android:fontFamily="@font/lato"
            android:textColor="#FFFFFF"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="25dp" />

    </RelativeLayout>

</RelativeLayout>